--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "setup-heroku": "npm run create-heroku-db && npm run create-heroku-db -- --as DEV_DATABASE && heroku config:set PGSSLMODE=require && npm run get-dev-db-url",
     "create-heroku-db": "heroku addons:create heroku-postgresql:hobby-dev",
     "get-dev-db-url": "heroku config:get DEV_DATABASE_URL",
-    "get-prod-db-url": "heroku config:get DATABASE_URL"
+    "get-prod-db-url": "heroku config:get DATABASE_URL",
+    "sq-start": "node -r dotenv/config setup-db.js"
   },
   "jest": {
     "testEnvironment": "node"
